# ChangeLog for sys-libs/freeipmi
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.30 2011/01/31 17:46:49 flameeyes Exp $

*freeipmi-1.0.1 (31 Jan 2011)

  31 Jan 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -freeipmi-0.6.10.ebuild, -files/freeipmi-0.6.10+glibc-2.8.patch,
  +freeipmi-1.0.1.ebuild:
  Version bump, remove old version and patch. Thanks to Christian (idl0r) in
  bug #353327.

  05 Oct 2010; Markus Meier <maekke@gentoo.org> freeipmi-0.8.9.ebuild:
  x86 stable, bug #339140

  04 Oct 2010; Markos Chandras <hwoarang@gentoo.org> freeipmi-0.8.9.ebuild:
  Stable on amd64 wrt bug #339140

*freeipmi-0.8.10 (29 Sep 2010)

  29 Sep 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -freeipmi-0.8.8-r1.ebuild, +freeipmi-0.8.10.ebuild:
  Version bump; cleanup old version.

*freeipmi-0.8.9 (21 Aug 2010)

  21 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +freeipmi-0.8.9.ebuild:
  Version bump.

*freeipmi-0.8.8-r1 (09 Aug 2010)

  09 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -freeipmi-0.4.4.ebuild, -freeipmi-0.5.6.ebuild,
  -files/freeipmi-0.5.6-as_needed.patch,
  -files/freeipmi-0.5.6-missing_syslog_include.patch,
  -freeipmi-0.7.15.ebuild, -freeipmi-0.8.8.ebuild,
  +freeipmi-0.8.8-r1.ebuild, metadata.xml:
  Take over maintainership of package; cleanup old versions; add a new
  revision that moves a bit the files around and fix a few issues.

*freeipmi-0.8.8 (08 Aug 2010)

  08 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +freeipmi-0.8.8.ebuild:
  Version bump.

*freeipmi-0.7.15 (19 Nov 2009)

  19 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -freeipmi-0.7.12.ebuild, -freeipmi-0.7.13.ebuild, -freeipmi-0.7.14.ebuild,
  +freeipmi-0.7.15.ebuild:
  Version bump and remove old.

*freeipmi-0.7.14 (24 Oct 2009)

  24 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +freeipmi-0.7.14.ebuild:
  Version bump.

*freeipmi-0.7.13 (01 Oct 2009)
