@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/freeipmi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.30 2011/01/31 17:46:49 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.31 2011/02/23 00:18:05 flameeyes Exp $
+
+*freeipmi-1.0.2 (23 Feb 2011)
+
+  23 Feb 2011; Diego E. Pettenò <flameeyes@gentoo.org> +freeipmi-1.0.2.ebuild:
+  Version bump.
 
 *freeipmi-1.0.1 (31 Jan 2011)
 
